# ChaosDynWallpaper

backend/: Cargo.toml  tauri.conf.json
backend/src/: lib.rs  main.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: main.tsx
